Fix header z-index issue

--- a/components/new/Header/Header.module.scss
+++ b/components/new/Header/Header.module.scss
@@ -1,3 +1,3 @@
 .header {
-  @apply fixed flex flex-row justify-between w-screen bg-white border-b border-black border-solid items-center px-7 py-2 md:flex-col md:h-screen md:left-0 md:top-0 md:border-solid md:border-black md:border-b-0 md:border-r md:w-64;
+  @apply fixed flex flex-row justify-between w-screen bg-white border-b border-black border-solid items-center px-7 py-2 md:flex-col md:h-screen md:left-0 md:top-0 md:border-solid md:border-black md:border-b-0 md:border-r md:w-64 z-10 md:z-0;
 }
